WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133470
TileGrid::prepopulateRect populates the wrong tiles if scale != 1
https://bugs.webkit.org/show_bug.cgi?id=133470
Summary
TileGrid::prepopulateRect populates the wrong tiles if scale != 1
Tim Horton
Reported
2014-06-03 01:07:45 PDT
prepopulateRect does the wrong math for non-unit-scale tile caches.
Attachments
patch
(3.45 KB, patch)
2014-06-03 02:23 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-06-03 02:23:39 PDT
Created
attachment 232418
[details]
patch
Tim Horton
Comment 2
2014-06-03 11:14:12 PDT
http://trac.webkit.org/changeset/169564
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug