TileGrid::prepopulateRect populates the wrong tiles if scale != 1 https://bugs.webkit.org/show_bug.cgi?id=133470

Reviewed by Simon Fraser.

* page/FrameView.cpp:
(WebCore::FrameView::requestScrollPositionUpdate):
* platform/graphics/ca/mac/TileGrid.mm:
(WebCore::TileGrid::prepopulateRect):
(WebCore::TileGrid::revalidateTiles):
prepopulateRect takes rects in "content" coordinates, but when later passed to
ensureTilesForRect, they're expected to be in the same coordinate space as the layer's
visible rect, and are scaled up. So, apply the inverse scale to counter that.


Canonical link: https://commits.webkit.org/151504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169564 268f45cc-cd09-0410-ab3c-d52691b4dbfc